--- a/.gitignore
+++ b/.gitignore
@@ -16,16 +16,7 @@
 /captures
 
 # User-specific configurations
-/.idea/libraries
-/.idea/workspace.xml
-/.idea/tasks.xml
-/.idea/.name
-/.idea/compiler.xml
-/.idea/copyright/profiles_settings.xml
-/.idea/encodings.xml
-/.idea/misc.xml
-/.idea/modules.xml
-/.idea/scopes/scope_settings.xml
+/.idea/
 /app/*.iml
 *.iml
 
@@ -43,3 +34,8 @@ local.properties
 
 # Android Studio Navigation editor temp files
 .navigation
+
+splash_guesser.ai
+gradlew
+gradlew.bat
+gradle.properties
